# chess

./: CMakeLists.txt  bishop.cpp  bishop.h  board.cpp  board.h  game.cpp  game.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h  player.cpp  player.h  queen.cpp  queen.h  rook.cpp  rook.h  slot.cpp  slot.h
